tests/fixtures/LatestTests/VariableDeclarationTests/errors/reassignment_type_mismatch_int_to_str.fg
/; EXPECT_ERROR: AssignmentExpressionTypeMismatch
var x:str = "Hello"
x <- 42

